Created modules for DOM manipulation, todo item rendering, and app logic.

--- a/src/style.css
+++ b/src/style.css
@@ -44,15 +44,15 @@ body {
 /* Title Bar */
 
 #title-bar {
-    height: 50px;
+    min-height: 60px;
     display: flex;
     justify-content: space-between;
     background: cornflowerblue;
 }
 
 #title {
-    font-family: 'Galatea-Light';
-    font-size: 21px;
+    font-family: 'Galatea';
+    font-size: 27px;
     color: white;
     height: 100%;
     display: flex;
@@ -96,7 +96,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 150px;
+    height: 180px;
+    width: fit-content;
     margin-top: 30px;
     margin-left: 30px;
 }
@@ -104,18 +105,32 @@ body {
 #project-cont {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex-grow: 1;
     margin: 30px 0 0 30px;
 }
 
 .main-cats {
-    font-size: 15px;
+    font-size: 17px;
     font-family: 'Galatea-Thin';
+    cursor: pointer;
+    transition: 0.1s ease-out;
+}
+
+.main-cats:hover {
+    font-family: 'Galatea';
 }
 
 #project-title {
     font-family: 'Galatea-Light';
-    font-size: 21px;
+    font-size: 24px;
+}
+
+.main-cat-selected {
+    font-family: 'Galatea';
+}
+
+.main-cat-unselected {
+    font-family: 'Galatea-Thin';
 }
 
 
@@ -124,6 +139,71 @@ body {
 
 #todo-cont {
     width: 100%;
+    height: calc(100vh - 110px);
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    overflow: auto;
+}
+
+.todo-item-cont {
+    width: 800px;
+    min-height: 47px;
+    background: rgb(245, 245, 245);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px 0 30px;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.todo-item-cont:hover {
+    width: 810px;
+    box-shadow: 1px 2px 6px rgb(32, 33, 36, .28);
+    transition: 0.1s ease-out;
+}
+
+#right-cont {
+    display: flex;
+    align-items: center;
     justify-content: center;
+}
+
+.item-buttons {
+    width: 12px;
+    height: 12px;
+    margin-left: 10px;
+    background: rgb(75, 75, 75);
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.item-buttons:hover {
+    background: rgb(160, 160, 160);
+}
+
+.todo-item-font {
+    font-family: 'Galatea-Thin';
+    font-size: 14.5px;
+}
+
+#priority-cont {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 4px;
+}
+
+.high-priority {
+    background: lightcoral;
+}
+
+.medium-priority {
+    background: lemonchiffon;
+}
+
+.low-priority {
+    background: darkseagreen;
 }
