--- a/src/style.css
+++ b/src/style.css
@@ -278,10 +278,179 @@ body {
     background: darkseagreen;
 }
 
-#item-edit-cont {
-    height: 80px;
+.item-edit-cont {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .hide-edit-cont {
     display: none;
+}
+
+#create-new-task-cont {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Galatea-Light';
+    font-size: 14.5px;
+    width: 800px;
+    min-height: 47px;
+    margin-bottom: 50px;
+}
+
+#create-new-task-btn {
+    border: none;
+    background: white;
+    cursor: pointer;
+}
+
+#create-new-task-field-cont {
+    display: flex;
+    height: 50%;
+}
+
+#create-new-task-field-cont.hide {
+    display: none;
+}
+
+#new-title-field {
+    border: none;
+    width: 200px;
+    background: rgb(245, 245, 245);
+    font-size: 12px;
+    font-family: 'Galatea-Light';
+    padding-left: 5px;
+}
+
+#new-title-field:focus {
+    outline-width: 0;
+}
+
+#new-date-field {
+    border: none;
+    width: 120px;
+    background: rgb(245, 245, 245);
+    font-size: 12px;
+    margin-left: 15px;
+    padding-left: 5px;
+    font-family: 'Galatea-Light';
+}
+
+#new-date-field:focus {
+    outline-width: 0;
+}
+
+#new-priority-field {
+    font-family: 'Galatea-Light';
+    margin-left: 15px;
+    padding-left: 5px;
+    border: none;
+    background: rgb(245, 245, 245);
+    font-size: 12px;
+}
+
+#new-task-project-field {
+    width: 120px;
+    background: rgb(245, 245, 245);
+    border: none;
+    font-family: 'Galatea-Light';
+    font-size: 12px;
+    margin-left: 15px;
+    padding-left: 5px;
+}
+
+#new-task-project-field:focus {
+    outline-width: 0;
+}
+
+#new-task-submit-btn {
+    margin-left: 15px;
+    border: none;
+    cursor: pointer;
+    width: 65px;
+    font-family: 'Galatea-Light';
+    background: cornflowerblue;
+    color: white;
+    font-size: 12px;
+}
+
+#header-cont {
+    border-bottom: 1px solid rgb(236, 236, 236);
+    font-family: 'Galatea-Light';
+    font-size: 23px;
+    width: 800px;
+    margin-bottom: 20px;
+}
+
+#edit-cont {
+    display: flex;
+    height: 50%;
+}
+
+#edit-title-field {
+    border: none;
+    width: 200px;
+    height: 100%;
+    background: white;
+    font-size: 12px;
+    font-family: 'Galatea-Light';
+    padding-left: 5px;
+}
+
+#edit-title-field:focus {
+    outline-width: 0;
+}
+
+#edit-date-field {
+    border: none;
+    width: 120px;
+    height: 100%;
+    background: white;
+    font-size: 12px;
+    margin-left: 15px;
+    padding-left: 5px;
+    font-family: 'Galatea-Light';
+}
+
+#edit-date-field:focus {
+    outline-width: 0;
+}
+
+#edit-priority-field {
+    height: 100%;
+    font-family: 'Galatea-Light';
+    margin-left: 15px;
+    padding-left: 5px;
+    border: none;
+    background: white;
+    font-size: 12px;
+}
+
+#edit-task-project-field {
+    width: 120px;
+    height: 100%;
+    background: white;
+    border: none;
+    font-family: 'Galatea-Light';
+    font-size: 12px;
+    margin-left: 15px;
+    padding-left: 5px;
+}
+
+#edit-task-project-field:focus {
+    outline-width: 0;
+}
+
+#edit-task-submit-btn {
+    margin-left: 15px;
+    border: none;
+    cursor: pointer;
+    width: 65px;
+    height: 100%;
+    font-family: 'Galatea-Light';
+    background: cornflowerblue;
+    color: white;
+    font-size: 12px;
 }
