Added Google Authentication with Firebase.

--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ body {
     min-height: 55px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background: cornflowerblue;
 }
 
@@ -74,6 +75,23 @@ body {
     align-items: center;
     justify-content: center;
     margin-right: 30px;
+}
+
+#user-img {
+    height: 25px;
+    border-radius: 25px;
+}
+
+.sign-btns {
+    border: none;
+    width: 65px;
+    height: 25px;
+    background: rgb(59, 103, 184);
+    color: white;
+    cursor: pointer;
+    font-family: 'Galatea-Light';
+    font-size: 12px;
+    box-shadow: 1px 2px 4px rgb(46, 80, 145);
 }
 
 
@@ -151,12 +169,12 @@ body {
 
 #new-project-input {
     width: calc(100% - 30px);
-    height: 30px;
+    height: 23px;
     margin-top: 15px;
     border: none;
     background: rgb(245, 245, 245);
     padding-left: 5px;
-    font-family: 'Galatea-Thin';
+    font-family: 'Galatea-Light';
 }
 
 #new-project-input:focus {
@@ -210,6 +228,10 @@ body {
     padding-top: 50px;
     overflow: auto;
 }
+
+
+
+/* Todo List Items */
 
 .todo-item-cont {
     width: 800px;
@@ -278,6 +300,33 @@ body {
     background: darkseagreen;
 }
 
+#check-cont {
+    height: 11px;
+    width: 11px;
+    border: 1px solid rgb(199, 199, 199);
+    border-radius: 3px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.unchecked {
+    background: white;
+}
+
+.checked {
+    background: rgb(199, 199, 199);
+}
+
+
+
+/* List Item Editor */
+
+#item-title-cont {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
 .item-edit-cont {
     height: 50px;
     display: flex;
@@ -288,6 +337,93 @@ body {
 .hide-edit-cont {
     display: none;
 }
+
+#edit-cont {
+    display: flex;
+    height: 50%;
+}
+
+.edit-title-field {
+    border: none;
+    width: 200px;
+    height: 100%;
+    background: white;
+    font-size: 12px;
+    font-family: 'Galatea-Light';
+    padding-left: 5px;
+}
+
+#edit-title-field:focus {
+    outline-width: 0;
+}
+
+#edit-date-field {
+    border: none;
+    width: 120px;
+    height: 100%;
+    background: white;
+    font-size: 12px;
+    margin-left: 15px;
+    padding-left: 5px;
+    font-family: 'Galatea-Light';
+}
+
+#edit-date-field:focus {
+    outline-width: 0;
+}
+
+#edit-priority-field {
+    height: 100%;
+    font-family: 'Galatea-Light';
+    margin-left: 15px;
+    padding-left: 5px;
+    border: none;
+    background: white;
+    font-size: 12px;
+}
+
+.edit-task-project-field {
+    width: 120px;
+    height: 100%;
+    background: white;
+    border: none;
+    font-family: 'Galatea-Light';
+    font-size: 12px;
+    margin-left: 15px;
+    padding-left: 5px;
+}
+
+#edit-task-project-field:focus {
+    outline-width: 0;
+}
+
+#edit-task-submit-btn {
+    margin-left: 15px;
+    border: none;
+    cursor: pointer;
+    width: 65px;
+    height: 100%;
+    font-family: 'Galatea-Light';
+    background: cornflowerblue;
+    color: white;
+    font-size: 12px;
+}
+
+
+
+/* List Header */
+
+#header-cont {
+    border-bottom: 1px solid rgb(236, 236, 236);
+    font-family: 'Galatea-Light';
+    font-size: 23px;
+    width: 800px;
+    margin-bottom: 20px;
+}
+
+
+
+/* New Task Creator */
 
 #create-new-task-cont {
     display: flex;
@@ -370,85 +506,6 @@ body {
     border: none;
     cursor: pointer;
     width: 65px;
-    font-family: 'Galatea-Light';
-    background: cornflowerblue;
-    color: white;
-    font-size: 12px;
-}
-
-#header-cont {
-    border-bottom: 1px solid rgb(236, 236, 236);
-    font-family: 'Galatea-Light';
-    font-size: 23px;
-    width: 800px;
-    margin-bottom: 20px;
-}
-
-#edit-cont {
-    display: flex;
-    height: 50%;
-}
-
-#edit-title-field {
-    border: none;
-    width: 200px;
-    height: 100%;
-    background: white;
-    font-size: 12px;
-    font-family: 'Galatea-Light';
-    padding-left: 5px;
-}
-
-#edit-title-field:focus {
-    outline-width: 0;
-}
-
-#edit-date-field {
-    border: none;
-    width: 120px;
-    height: 100%;
-    background: white;
-    font-size: 12px;
-    margin-left: 15px;
-    padding-left: 5px;
-    font-family: 'Galatea-Light';
-}
-
-#edit-date-field:focus {
-    outline-width: 0;
-}
-
-#edit-priority-field {
-    height: 100%;
-    font-family: 'Galatea-Light';
-    margin-left: 15px;
-    padding-left: 5px;
-    border: none;
-    background: white;
-    font-size: 12px;
-}
-
-#edit-task-project-field {
-    width: 120px;
-    height: 100%;
-    background: white;
-    border: none;
-    font-family: 'Galatea-Light';
-    font-size: 12px;
-    margin-left: 15px;
-    padding-left: 5px;
-}
-
-#edit-task-project-field:focus {
-    outline-width: 0;
-}
-
-#edit-task-submit-btn {
-    margin-left: 15px;
-    border: none;
-    cursor: pointer;
-    width: 65px;
-    height: 100%;
     font-family: 'Galatea-Light';
     background: cornflowerblue;
     color: white;
