--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ body {
 
 #auth-cont {
     height: 100%;
-    width: 100px;
+    min-width: 100px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -84,14 +84,15 @@ body {
 
 .sign-btns {
     border: none;
-    width: 65px;
+    width: 75px;
     height: 25px;
     background: rgb(59, 103, 184);
     color: white;
     cursor: pointer;
     font-family: 'Galatea-Light';
-    font-size: 12px;
+    font-size: 11.5px;
     box-shadow: 1px 2px 4px rgb(46, 80, 145);
+    margin-right: 10px;
 }
 
 
