Application is now fully functional with all features added. Minor additions and fixes still needs to be done.

--- a/src/style.css
+++ b/src/style.css
@@ -268,13 +268,8 @@ body {
     width: 12px;
     height: 12px;
     margin-left: 10px;
-    background: rgb(75, 75, 75);
     cursor: pointer;
     border-radius: 10px;
-}
-
-.item-buttons:hover {
-    background: rgb(160, 160, 160);
 }
 
 .todo-item-font {
@@ -308,14 +303,16 @@ body {
     border-radius: 3px;
     margin-right: 5px;
     cursor: pointer;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .unchecked {
-    background: white;
+    background-image: none;
 }
 
 .checked {
-    background: rgb(199, 199, 199);
+    background-image: url(./images/check.png);
 }
 
 
